--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -38,6 +39,6 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.17.0",
-    "tailwindcss": "^3.3.5"
+    "sass": "^1.69.7"
   }
 }
